# Bottlebrush_Engine

./: .gitignore  README.md  pull_request_template.md
Bottlebrush_Engine/Bottlebrush_Engine/: Bottlebrush_Engine.cpp  CMakeLists.txt  EntryPoint.cpp  EntryPoint.h  imgui.ini
Bottlebrush_Engine/Bottlebrush_Engine/BBAI/: CMakeLists.txt  FSM.cpp  FSM.h  Movement.cpp  Movement.h  NPC.cpp  NPC.h  Singleton.h  State.h
Bottlebrush_Engine/Bottlebrush_Engine/BBAssetImporter/: BBAssetImporter.cpp  BBAssetImporter.h  CMakeLists.txt  Mesh.cpp  Mesh.h
Bottlebrush_Engine/Bottlebrush_Engine/BBComponentSystem/: CMakeLists.txt  Components.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  Systems.cpp  Systems.h
Bottlebrush_Engine/Bottlebrush_Engine/BBEvent/: CMakeLists.txt  Event.h  EventDispatcher.cpp  EventDispatcher.h  Message.cpp  Message.h  Singleton.h
Bottlebrush_Engine/Bottlebrush_Engine/BBGUI/: BBGUI.cpp  BBGUI.h  CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/BBGraphics/: CMakeLists.txt  Camera.cpp  Camera.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  WaterTile.cpp  WaterTile.h
Bottlebrush_Engine/Bottlebrush_Engine/BBInput/: CMakeLists.txt  InputMgr.cpp  InputMgr.h  KeyInput.cpp  KeyInput.h  Window.cpp  Window.h
Bottlebrush_Engine/Bottlebrush_Engine/BBMD2/: BBMD2.cpp  BBMD2.h  CMakeLists.txt  MD2Model.cpp  MD2Model.h  MD2Texture.cpp  MD2Texture.h  Movement.h
Bottlebrush_Engine/Bottlebrush_Engine/BBMaths/: CMakeLists.txt  Maths.cpp  Maths.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
Bottlebrush_Engine/Bottlebrush_Engine/BBPhysics/: BBox.cpp  BBox.h  CMakeLists.txt  Collider.cpp  Collider.h  CollisionMgr.cpp  CollisionMgr.h  Physics.cpp  Physics.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsMgr.cpp  PhysicsMgr.h  physics_test.cpp
Bottlebrush_Engine/Bottlebrush_Engine/BBResourceManager/: BBResourceManager.cpp  BBResourceManager.hpp  CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/BBScene/: CMakeLists.txt  Scene.cpp  Scene.h
Bottlebrush_Engine/Bottlebrush_Engine/BBScript/: BBScript.cpp  BBScript.h  CMakeLists.txt  RegisterAIScripts.cpp  RegisterAIScripts.h  RegisterPhysics.cpp  RegisterPhysics.h
Bottlebrush_Engine/Bottlebrush_Engine/Game/: Cube.lua  GrassCube.lua  House.lua  NPC.lua  PineTree.lua  Rock1.lua  exitCube.lua  ico-sphere.lua  master_file.lua
Bottlebrush_Engine/Bottlebrush_Engine/Game/AI/: States.lua
Bottlebrush_Engine/Bottlebrush_Engine/Game/AIStates/: IdlerStates.lua  Patroller1.lua  Patroller2.lua  PatrollerStates.lua  States.lua  WanderStates.lua
Bottlebrush_Engine/Bottlebrush_Engine/Game/MD2Models/: doomguy.lua  necro.lua
Bottlebrush_Engine/Bottlebrush_Engine/Game/NPCs/: Idler1.lua  NPC.lua  NPC2.lua  Patroller1.lua  Patroller2.lua  Wanderer1.lua
Bottlebrush_Engine/Bottlebrush_Engine/Game/Terrain/: MainTerrain.lua  Water.lua
Bottlebrush_Engine/Bottlebrush_Engine/RenderEngine/: CMakeLists.txt  FrameBuffer.h  GraphicsFactory.cpp  GraphicsFactory.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Model.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
Bottlebrush_Engine/Bottlebrush_Engine/RenderEngine/Platform/OpenGL/: CMakeLists.txt  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLLogCall.cpp  OpenGLLogCall.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLModel.cpp  OpenGLModel.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexBufferLayout.cpp  OpenGLVertexBufferLayout.h
Bottlebrush_Engine/Bottlebrush_Engine/Resources/Models/: Arbre_Normal.mtl  Cube_With_Pizazz.mtl  Grass.mtl  Pine_Tree.mtl  Rock_1.mtl  Rock_2.mtl  Rock_3.mtl  Splashcreen.mtl  ico-sphere.mtl  noooooo_cleoooo.mtl  nooooooe_cleooooooee.mtl  please.mtl
Bottlebrush_Engine/Bottlebrush_Engine/Resources/Scripts/: EntityFactoryTest.lua
Bottlebrush_Engine/Bottlebrush_Engine/Resources/Shaders/Fragment/: BasicTex.frag  Camera.frag  Heightmap.frag  Water.frag
Bottlebrush_Engine/Bottlebrush_Engine/Resources/Shaders/Vertex/: Basic.vert  BasicTex.vert  Camera.vert  Heightmap.vert  MD2Model.vert  Water.vert
Bottlebrush_Engine/Bottlebrush_Engine/Shaders/Fragment/: Basic.frag
Bottlebrush_Engine/Bottlebrush_Engine/Shaders/Vertex/: Basic.vert  BasicTex.vert
Bottlebrush_Engine/Bottlebrush_Engine/Tests/BBMaths/: CMakeLists.txt  TestMaths.cpp  TestPoint2D.cpp  TestPoint3D.cpp  TestVector2D.cpp  TestVector3D.cpp  TestVector4D.cpp
Bottlebrush_Engine/Bottlebrush_Engine/Tests/EntityFactoryAndScriptTest/: CMakeLists.txt  D20.lua  EntityFactoryTest.cpp  EntityFactoryTest.lua  EntityFactoryandScriptTest.cpp  MasterFileTest.lua  cube.lua
Bottlebrush_Engine/Bottlebrush_Engine/Tests/ResourceCreationTests/: CMakeLists.txt  ResourceCreationTests.cpp
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/EnTT/: pax_global_header
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/Lua/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/Lua/lua-5.4.6/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/Lua/sol2-3.3.0/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/STB/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/assimp/: CMakeLists.txt  Dockerfile
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/glad/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/Vendors/imGUI/: CMakeLists.txt
Bottlebrush_Engine/Bottlebrush_Engine/__sample_tests/: CMakeLists.txt  sample1_unittest.cpp
Bottlebrush_Engine/Bottlebrush_Engine/enc_temp_folder/20492282a91db82e6c31cf0fa9a7e65/: EntryPoint.cpp
Bottlebrush_Engine/Bottlebrush_Engine/src/: Maths.cpp
(+391 files in other folders)
